--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,50 +3,70 @@
 
 <head>
     <meta charset="utf-8">
+    <style>
+        body
+        {
+            background-color: #454d55;
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User Account</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script>
         var eventSource = new EventSource("/listen")
-        
-        eventSource.addEventListener("message", function(e) {
-          console.log(e.data)
+
+        eventSource.addEventListener("message", function (e) {
+            console.log(e.data)
         }, false)
-    
-        eventSource.addEventListener("online", function(e) {
-          // console.log(e.data.color)
-          data = JSON.parse(e.data)
-          document.querySelector("#clock").innerText = data.clock
+
+        eventSource.addEventListener("online", function (e) {
+            data = JSON.parse(e.data)
+            document.querySelector("#clock").innerText = data.clock
         }, true)
-    
-      </script>
+
+    </script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <h2>Profil użytkownika</h2>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">User Account</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              Logged in {{ session.name }}  
+              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            </li>
+          </ul>
         </div>
-        <br>
-        <table class="table table-hover table-dark w-auto">
-            <tr>
-                <td>Imię i nazwisko:</td>
-                <td>Piotr Lebelt</td>
-            </tr>
-            <tr>
-                <td>Nr indeksu:</td>
-                <td>155243</td>
-            </tr>
-        </table>
+      </nav>
 
-        <div class="row">
-            Logged in : <strong>{{session.name}} | <a href="{{ url_for('logout') }}"> Logout</a>
+
+
+
+    <div class="container">
+    <div class="row mt-4">
+        <div class="col-md-6 offset-md-3">
+          <h2 class="text-center">Profil użytkownika</h2>
+          <table class="table table-hover table-dark">
+            <tr>
+              <td>Imię i nazwisko:</td>
+              <td>Piotr Lebelt</td>
+            </tr>
+            <tr>
+              <td>Nr indeksu:</td>
+              <td>155243</td>
+            </tr>
+          </table>
         </div>
-        <br><br>
-        
-    </div>
-    <h1>Clock</h1>
-    <div id="clock"></div>
+      </div>
+    <footer class="mt-4">
+        <p id="clock" class="text-center"></p>
+      </footer>
+      </div>   
 </body>
 
 </html>
