--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,69 +4,70 @@
 <head>
     <meta charset="utf-8">
     <style>
-        body
-        {
-            background-color: #454d55;
+        body {
+            background-color: #454d55 !important;
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>User Account</title>
+    <title>Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script>
-        var eventSource = new EventSource("/listen")
+        // sse
+        var eventSource = new EventSource("/listen");
 
         eventSource.addEventListener("message", function (e) {
-            console.log(e.data)
-        }, false)
+            console.log(e.data);
+        }, false);
 
         eventSource.addEventListener("online", function (e) {
-            data = JSON.parse(e.data)
-            document.querySelector("#clock").innerText = data.clock
-        }, true)
+            data = JSON.parse(e.data);
+            document.querySelector("#clock").innerText = data.clock;
+        }, true);
 
     </script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">User Account</a>
+        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="{{ url_for('users') }}">Użytkownicy JSON</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              Logged in {{ session.name }}  
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <p style="color: white;">Zalogowano <u><b>{{ session.name }}</b></u></font>
+                    <a class="nav-link" href="{{ url_for('logout') }}" style="color: lightgrey;">Logout</a>
+                </li>
+            </ul>
         </div>
-      </nav>
-
-
-
+    </nav>
 
     <div class="container">
-    <div class="row mt-4">
-        <div class="col-md-6 offset-md-3">
-          <h2 class="text-center">Profil użytkownika</h2>
-          <table class="table table-hover table-dark">
-            <tr>
-              <td>Imię i nazwisko:</td>
-              <td>Piotr Lebelt</td>
-            </tr>
-            <tr>
-              <td>Nr indeksu:</td>
-              <td>155243</td>
-            </tr>
-          </table>
+        <div class="row mt-4">
+            <div class="col-md-6 offset-md-3">
+                <h2 class="text-center" style="color: white;">Profil użytkownika</h2>
+                <table class="table table-hover table-dark">
+                    <tr>
+                        <td>Imię i nazwisko:</td>
+                        <td>Piotr Lebelt</td>
+                    </tr>
+                    <tr>
+                        <td>Nr indeksu:</td>
+                        <td>155243</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-      </div>
-    <footer class="mt-4">
-        <p id="clock" class="text-center"></p>
-      </footer>
-      </div>   
+        <footer class="mt-4">
+            <p id="clock" class="text-center" style="color: white;"></p>
+        </footer>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
