--- a/templates/login.html
+++ b/templates/login.html
@@ -2,38 +2,44 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<style>
-		body {
-			background-color: #444d55;
+    <meta charset="utf-8">
+    <style>
+        body {
+            background-color: #444d55 !important;
+			color: aliceblue !important;
+        }
+		a {
+			color: aliceblue !important;
 		}
-	</style>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>User Login Form</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+		a:hover {
+			color: white !important;
+		}
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>User Login Form</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-	<div class="container">
-		<h2>User Login</h2>
-		<form action="{{ url_for('login') }}" method="post">
-			{% if mesage is defined and mesage %}
-			<div class="alert alert-warning">{{ mesage }}</div>
-			{% endif %}
-			<div class="form-group">
-				<label for="email">Email:</label>
-				<input type="email" class="form-control" id="email" name="email" placeholder="Enter email" name="email">
-			</div>
-			<div class="form-group">
-				<label for="pwd">Password:</label>
-				<input type="password" class="form-control" id="password" name="password" placeholder="Enter password"
-					name="pswd">
-			</div>
-			<button type="submit" class="btn btn-primary">Login</button>
-			<p class="bottom">Dont't have an account? <a class="bottom" href="{{url_for('register')}}"> Register
-					here</a></p>
-		</form>
-	</div>
+    <div class="container smaller-form">
+        <h2 class="text-center">Logowanie</h2>
+        <form action="{{ url_for('login') }}" method="post">
+            {% if message is defined and message %}
+            <div class="alert alert-warning">{{ message }}</div>
+            {% endif %}
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control w25" id="email" name="email" placeholder="Podaj email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Hasło:</label>
+                <input type="password" class="form-control w25" id="password" name="password" placeholder="Podaj hasło"
+                    required>
+            </div>
+            <button type="submit" class="btn btn-success">Zaloguj</button>
+            <p class="text-center mt-3">Nie masz konta? &emsp;<a class="link-light" href="{{ url_for('register') }}">Zarejestruj się</a></p>
+        </form>
+    </div>
 </body>
 
 </html>
