--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <style>
+        body {
+            background-color: #444d55 !important;
+			color: aliceblue !important;
+        }
+		a {
+			color: aliceblue !important;
+		}
+		a:hover {
+			color: white !important;
+		}
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Formularz rejestracyjny</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -11,23 +23,23 @@
     <div class="container">
         <h3>Rejestracja użytkownika</h3>
         <form action="{{ url_for('register') }}" method="post">
-            {% if mesage is defined and mesage %}
-            <div class="alert alert-warning">{{ mesage }}</div>
+            {% if message is defined and message %}
+            <div class="alert alert-warning">{{ message }}</div>
             {% endif %}
             <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" name="name">
+                <label for="name">Nazwa:</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Podaj nazwę" name="name">
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" name="email">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Podaj email" name="email">
             </div>
             <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"
+                <label for="pwd">Hasło:</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Podaj hasło"
                     name="pswd">
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-success">Zarejestruj</button>
             <p class="bottom">Już posiadasz konto? <a class="bottom" href="{{url_for('login')}}"> Zaloguj się tutaj</a></p>
         </form>
     </div>
