--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,8 +29,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Home</a>
-        <a class="navbar-brand" href="{{ url_for('users') }}">Użytkownicy JSON</a>
+        <!-- <a class="navbar-brand" href="#">Home</a> -->
+        <!-- <a class="navbar-brand" href="{{ url_for('users') }}">Użytkownicy JSON</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,8 +38,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <p style="color: white;">Zalogowano <u><b>{{ session.name }}</b></u></font>
-                    <a class="nav-link" href="{{ url_for('logout') }}" style="color: lightgrey;">Logout</a>
+                    <!-- <p style="color: white;">Zalogowano <u><b>{{ session.name }}</b></u></font> -->
+                    <a class="nav-link" href="{{ url_for('login') }}" style="color: lightgrey;">Zaloguj</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="row mt-4">
             <div class="col-md-6 offset-md-3">
-                <h2 class="text-center" style="color: white;">Profil użytkownika</h2>
+                <h2 class="text-center" style="color: white;">Strona dla nieautoryzowanych użytkowników:</h2>
                 <table class="table table-hover table-dark">
                     <tr>
                         <td>Imię i nazwisko:</td>
