--- a/templates/users.html
+++ b/templates/users.html
@@ -1,50 +1,90 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>User Details</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <style>
         body {
-            padding: 20px;
+            
         }
+
         h1 {
             margin-bottom: 20px;
         }
+
         table {
             width: 100%;
             border-collapse: collapse;
         }
-        th, td {
+
+        th,
+        td {
             padding: 10px;
             text-align: left;
             border-bottom: 1px solid #ddd;
         }
+
         th {
             background-color: #f2f2f2;
         }
     </style>
 </head>
+
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{ url_for('users') }}">Home</a>
+        <!-- <a class="navbar-brand" href="{{ url_for('users') }}">Użytkownicy JSON</a> -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <p style="color: white;">Zalogowano <u><b>{{ session.name }}</b></u></font>
+                        <a class="nav-link" href="{{ url_for('logout') }}" style="color: lightgrey;">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <h1>User Details</h1>
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Username</th>
-                    <th>Email</th>
-                    <th>Password</th>
+                    <th>Id</th>
+                    <th>Nazwa</th>
+                    <th>Mail</th>
+                    <th>Hasło</th>
+                    <th>Operacja</th>
                 </tr>
             </thead>
             <tbody>
                 {% for user in users %}
                 <tr>
+                    <td>{{ user.id }}</td>
                     <td>{{ user.username }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.password }}</td>
+                    <td>
+                        <button type="button" data-toggle="modal" class="btn btn-warning">Edytuj</button>
+                        <button type="button" data-toggle="modal" class="btn btn-danger" onclick="return confirm('Czy na pewno usunąć?')">Usuń</button>
+                    </td>
                 </tr>
+
                 {% endfor %}
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td> <button type="button" class="btn btn-success">Dodaj</button>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
 </body>
+
 </html>
