--- a/templates/users.html
+++ b/templates/users.html
@@ -6,27 +6,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <style>
         body {
-            
+            background-color: #454d55 !important;
         }
 
         h1 {
             margin-bottom: 20px;
+            color: azure;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-        }
-
-        th,
-        td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f2f2f2;
         }
     </style>
 </head>
@@ -50,21 +40,21 @@
     </nav>
 
     <div class="container">
-        <h1>User Details</h1>
-        <table class="table table-striped">
+        <h1>Użytkownicy z pliku JSON</h1>
+        <table class="table table-hover table-dark">
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Nazwa</th>
-                    <th>Mail</th>
-                    <th>Hasło</th>
-                    <th>Operacja</th>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nazwa</th>
+                    <th scope="col">Mail</th>
+                    <th scope="col">Hasło</th>
+                    <th scope="col">Operacja</th>
                 </tr>
             </thead>
             <tbody>
                 {% for user in users %}
                 <tr>
-                    <td>{{ user.id }}</td>
+                    <th scope="row">{{ user.id }}</th>
                     <td>{{ user.username }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.password }}</td>
@@ -76,6 +66,7 @@
 
                 {% endfor %}
                 <tr>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
